# template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pre-push.yml  pytest.yml  trunk.yml
.trunk/: trunk.yaml
.trunk/configs/: .bandit  .markdownlint.yaml
src/backend/: __init__.py
tests/: test_backend.py
